--- a/.xonshrc
+++ b/.xonshrc
@@ -42,3 +42,5 @@ else:
     $HOMEDIR = $HOME
 
 aliases["config"] = "git --git-dir=$HOMEDIR/.dotfiles --work-tree=$HOMEDIR"
+
+$PROMPT = "{RED}{user}{WHITE}@{RED}{hostname} {BLUE}{cwd} $ "
