--- a/.xonshrc
+++ b/.xonshrc
@@ -42,5 +42,6 @@ else:
     $HOMEDIR = $HOME
 
 aliases["config"] = "git --git-dir=$HOMEDIR/.dotfiles --work-tree=$HOMEDIR"
+aliases["cd_school"] = 'cd "G:\\My Drive\\School"'
 
 $PROMPT = "{RED}{user}{WHITE}@{RED}{hostname} {BLUE}{cwd} {prompt_end} "
