--- a/.xonshrc
+++ b/.xonshrc
@@ -42,10 +42,13 @@ else:
     $HOMEDIR = $HOME
 
 def _compile_markdown(filenames):
-    for filename in filenames:
-        if filename.endswith(".md"):
-            filename = filename[:-3]
-        pandoc @(filename + ".md") -f markdown -o @(filename + ".pdf")
+    if len(filenames) >= 1:
+        for filename in filenames:
+            if filename.endswith(".md"):
+                filename = filename[:-3]
+            hercule @(filename + ".md") -o @(filename + "_temp.md")
+            pandoc @(filename + "_temp.md") -f markdown -o @(filename + ".pdf")
+            rm @(filename + "_temp.md")
 
 aliases["config"] = "git --git-dir=$HOMEDIR/.dotfiles --work-tree=$HOMEDIR"
 aliases["cd_school"] = 'cd "G:\\My Drive\\School"'
