Added GitHub Pull Requests settings, made verilog plugin use G2012, and added a snippet to quickly define a verilog module

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -22,5 +22,13 @@
     "gitlens.blame.toggleMode": "window",
     "gitlens.heatmap.toggleMode": "window",
     "explorer.confirmDragAndDrop": false,
-    "verilog.linting.linter": "iverilog"
+    "verilog.linting.linter": "iverilog",
+    "verilog.linting.iverilog.arguments": "-g2012",
+    "githubPullRequests.hosts": [
+        {
+            "host": "https://github.com",
+            "username": "oauth",
+            "token": "system"
+        }
+    ]
 }
