Associated lektor content files with markdown

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -30,5 +30,8 @@
             "username": "oauth",
             "token": "system"
         }
-    ]
+    ],
+    "files.associations": {
+        "*.lr": "markdown"
+    }
 }
