Enabled linting using pylint in VS Code

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -18,6 +18,7 @@
     "workbench.statusBar.feedback.visible": false,
     "terminal.integrated.shell.windows": "xonsh.bat",
     "python.jediEnabled": false,
+    "python.linting.pylintEnabled": true,
     "gitlens.hovers.currentLine.over": "line",
     "gitlens.blame.toggleMode": "window",
     "gitlens.heatmap.toggleMode": "window",
