--- a/.xonshrc
+++ b/.xonshrc
@@ -51,4 +51,4 @@ aliases["cd_school"] = 'cd "G:\\My Drive\\School"'
 aliases["md_compile"] = _compile_markdown
 aliases["vscode_dump"] = "code --list-extensions > $HOMEDIR/AppData/Roaming/Code/User/extensions"
 
-$PROMPT = "{RED}{user}{WHITE}@{RED}{hostname} {BLUE}{cwd} {prompt_end} "
+$PROMPT = "{RED}{user}{WHITE}@{RED}{hostname} {BLUE}{cwd}{WHITE}{gitstatus: [{}]} {BLUE}{prompt_end} "
