--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -1,7 +1,7 @@
 {
     "git.ignoreMissingGitWarning": true,
     "workbench.colorTheme": "Palenight Theme",
-    "editor.fontFamily": "'Fira Code', Consolas, 'Courier New', monospace",
+    "editor.fontFamily": "'Monoid', 'Fira Code Retina', Consolas, 'Courier New', monospace",
     "editor.fontLigatures": true,
     "window.titleBarStyle": "custom",
     "explorer.confirmDelete": false,
@@ -45,5 +45,6 @@
         "MD013": false,
         "MD041": false,
         "MD002": false
-    }
+    },
+    "editor.fontSize": 12
 }
