--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -71,5 +71,6 @@
             ]
         }
     ],
-    "workbench.editor.showTabs": false
+    "workbench.editor.showTabs": false,
+    "autoDocstring.docstringFormat": "sphinx"
 }
