--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -74,5 +74,6 @@
     "workbench.editor.showTabs": false,
     "autoDocstring.docstringFormat": "sphinx",
     "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue" 
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "python.formatting.provider": "black"
 }
