--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,15 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @themepack 'powerline/block/cyan'
+
+set prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
+bind - split-window -h
+bind | split-window -v
 
 run -b '~/.tmux/plugins/tpm/tpm'
