Updated tmux theme, fixed keybinds being swapped

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,13 +3,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @themepack 'powerline/block/cyan'
+set -g @themepack 'powerline/double/cyan'
 
 set prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-bind - split-window -h
-bind | split-window -v
+bind | split-window -h
+bind - split-window -v
 
 run -b '~/.tmux/plugins/tpm/tpm'
