Fixed tmux prefix reassign

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @themepack 'powerline/double/cyan'
 
-set prefix C-a
+set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
